--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "440632db",
+   "metadata": {},
+   "source": [
+    "# My Module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "3ecbf3b9",
